--- a/package.json
+++ b/package.json
@@ -3,16 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "build": "yarn gen-all && docusaurus build",
+    "clean-all": "docusaurus clean-api-docs all && docusaurus clean-api-docs all",
+    "clean-api-docs": "docusaurus clean-api-docs",
     "clear": "docusaurus clear",
+    "deploy": "docusaurus deploy",
+    "docusaurus": "docusaurus",
+    "gen-all": "docusaurus gen-api-docs all && docusaurus gen-api-docs all",
+    "gen-api-docs": "docusaurus gen-api-docs",
+    "re-gen": "yarn clean-all && yarn gen-all",
     "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
+    "start": "yarn gen-all && docusaurus start",
+    "swizzle": "docusaurus swizzle",
+    "typecheck": "tsc",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "write-translations": "docusaurus write-translations"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
@@ -29,18 +46,6 @@
     "@docusaurus/module-type-aliases": "2.2.0",
     "@tsconfig/docusaurus": "^1.0.5",
     "typescript": "^4.7.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "engines": {
     "node": ">=16.14"
