--- a/package.json
+++ b/package.json
@@ -32,21 +32,21 @@
     ]
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "2.4.3",
+    "@docusaurus/preset-classic": "2.4.3",
+    "@mdx-js/react": "~1.6.22",
     "clsx": "^1.2.1",
-    "docusaurus-plugin-openapi-docs": "1.5.0",
-    "docusaurus-theme-openapi-docs": "1.5.0",
+    "docusaurus-plugin-openapi-docs": "2.0.0",
+    "docusaurus-theme-openapi-docs": "2.0.0",
     "fp-ts": "^2.13.1",
     "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0",
-    "@tsconfig/docusaurus": "^1.0.6",
-    "typescript": "^4.7.4"
+    "@docusaurus/module-type-aliases": "3.0.0",
+    "@tsconfig/docusaurus": "^2.0.2",
+    "typescript": "5.3.2"
   },
   "engines": {
     "node": ">=16.14"
